# puzzler

./: README.md
puzzler/: install.py  pyproject.toml  requirements.txt  setup.py
puzzler/docs/: heptiamonds.txt  hexiamonds.rst  polycube-notes.rst  polycube-notes.txt  polycubes.rst
puzzler/docs/examples/: my_puzzle_1.py  my_puzzle_2.py  my_puzzle_3.py  my_puzzle_4.py
puzzler/docs/images/cubes/: polycubes-56-crystal-1.x3d
puzzler/puzzler/: __init__.py  coordsys.py  exact_cover_c.py  exact_cover_dlx.py  exact_cover_x2.py  sudoku.py  utils.py
puzzler/puzzler/puzzles/: __init__.py  heptiamonds.py  hexahexes.py  hexatwigs.py  hexiamonds.py  hexominoes.py  pentacubes.py  pentahexes.py  pentatwigs.py  pentominoes.py  polycubes.py  polycubes1234.py  polycubes12345.py  polycubes12345p6.py  polycubes234.py  polycubes56.py  polyhexes.py  polyhexes1234.py  polyhexes12345.py  polyhexes34.py  polyiamonds.py  polyiamonds12345.py  polyiamonds123456.py  polyiamonds1234567.py  polyominoes.py  polyominoes123.py  polyominoes1234.py  polyominoes12345.py  polyominoes123456.py  polyominoes234.py  polyominoes2345.py  polyominoes45.py  polyominoes_misc.py  polysticks.py  polysticks123.py  polysticks1234.py  polytrigs.py  polytrigs123.py  polytrigs23.py  polytwigs.py  (+16 more)
puzzler/test/: test_coordsys.py  test_puzzles.py
solutions/: heptiamonds-12x7-chevron.txt  heptiamonds-28x3-chevron.txt  heptiamonds-4x21-chevron.txt  heptiamonds-4x21.txt  heptiamonds-4x24-stack.txt  heptiamonds-6x14.txt  heptiamonds-7x12.txt  heptiamonds-diamond-window.txt  heptiamonds-hexagon-11.txt  (+254 more)
web/: index.txt  (+2 more)
(+907 files in other folders)
